--- a/app/components/skills/skills.module.css
+++ b/app/components/skills/skills.module.css
@@ -1,6 +1,4 @@
 .container {
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +6,7 @@
 }
 
 .selection {
-    padding: 5rem 0;
+    margin-top: 5rem;
 }
 
 .selection ul {
