--- a/app/components/hero/hero.module.css
+++ b/app/components/hero/hero.module.css
@@ -29,7 +29,8 @@
     padding: 1rem 1rem;
     line-height: 1.5;
     border-radius: 2rem;
-    box-shadow: 0.5rem 0 1rem var(--accent-color);
+    box-shadow: 0 0 1rem var(--accent-color);
+    background-color: var(--secondary-background-color);
 }
 
 .line {
