Latest style changes and implemented two projects to the section.

--- a/app/components/contact/contact.module.css
+++ b/app/components/contact/contact.module.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     width: 40vw;
-    font-size: 1.5rem;
+    font-size: 18px;
     line-height: 1.5;
     text-align: center;
 }
@@ -33,6 +33,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 14px;
 }
 
 .grid_two {
@@ -47,23 +48,36 @@
     width: 19vw;
     height: 4vh;
     padding: 1rem;
-    font-size: 1.25rem;
+    font-size: 14px;
+    box-shadow: 0 0 1rem var(--accent-color);
+}
+
+.grid_two input:focus {
+    outline: none;
+    box-shadow: 0 0 1rem var(--accent-color), 0 0 0.2rem var(--accent-color);
 }
 
 .message {
     background-color: var(--secondary-background-color);
     border-radius: 0.5rem;
-    margin: 2rem 0;
+    margin: 3rem 0;
     width: 40vw;
     height: 20vh;
     padding: 1rem;
-    font-size: 1.25rem;
+    font-size: 14px;
+    box-shadow: 0 0 1rem var(--accent-color);
 }
 
-.line {
-    margin: 1rem 0;
-    width: 35vw;
-    height: 0.5vh; 
+.message:focus {
+    outline: none;
+    box-shadow: 0 0 1rem var(--accent-color), 0 0 0.2rem var(--accent-color);
+}
+
+
+.container hr {
+    margin: 1rem auto;
+    width: 40vw;
+    height: 0.2vh; 
     background-color: var(--accent-color);
     border-radius: 0.5rem;
 }
