--- a/app/components/projects/projects.module.css
+++ b/app/components/projects/projects.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(2, 1fr);
     place-content: center;
     place-items: center;
+    border-bottom: 0.5rem solid var(--secondary-background-color);
 }
   
 .projectCard {
@@ -10,10 +11,20 @@
     height: 50vh;
     margin: 2rem;
     padding: 2rem;
-    border-radius: 2rem;
+    border-radius: 0.5rem;
     background-color: var(--secondary-background-color);
     box-shadow: 0 0 1rem var(--accent-color);
     transition: 0.6s ease-in-out;
+}
+
+.projectCard p {
+    padding: 0.5rem 0;
+    font-size: 16px;
+}
+
+.projectCard:hover {
+    transform: scale(1.1);
+    transition: 0.5s ease-in-out;
 }
 
 .heading {
@@ -21,16 +32,21 @@
     font-size: 5rem;
     margin: 1rem 0;
 }
-  
-.line {
-    width: 30vw;
-    height: 0.5rem;
+
+.headingHr {
+    margin: 1rem auto;
+    width: 40vw;
+    height: 0.2vh; 
     background-color: var(--accent-color);
-    margin: 1rem auto 5rem auto; /* Add this line to center the line */
+    border-radius: 0.5rem;
 }
 
-.line_card {
-    width: 10vw;
-    height: 0.25rem;
-    background-color: var(--accent-color);
+.icon {
+    margin: 1rem 0;
+    width: 4vw;
+    height: 4vh;
+}
+
+.icon:hover {
+    transition: 0.2s ease-in-out;
 }
