--- a/app/components/hero/hero.module.css
+++ b/app/components/hero/hero.module.css
@@ -10,14 +10,13 @@
 .image {
     width: 40vw;
     height: 50vh;
-    border-radius: 60%;
-    box-shadow: -0.5rem 0 1rem var(--accent-color);
+    box-shadow: 0 0 2rem var(--accent-color);
+    border-radius: 0.5rem;
 }
 
 .description {
     width: 40vw;
     height: 50vh;
-    font-size: 24px;
 }
 
 .description h1 {
@@ -28,15 +27,26 @@
     margin-top: 3rem;
     padding: 1rem 1rem;
     line-height: 1.5;
-    border-radius: 2rem;
     box-shadow: 0 0 1rem var(--accent-color);
     background-color: var(--secondary-background-color);
+    font-size: 22px;
+    border-radius: 0.5rem;
 }
 
-.line {
+.description hr {
     margin: 1rem 0;
     width: 30vw;
-    height: 0.5vh; 
+    height: 0.2vh;
     background-color: var(--accent-color);
     border-radius: 0.5rem;
+
+}
+
+@media (min-width: 926px) and (max-width: 1600px) {
+    .description h1 {
+        font-size: 63px;
+    }
+    .description p {
+        font-size: 18px;
+    }
 }
