--- a/app/components/skills/skills.module.css
+++ b/app/components/skills/skills.module.css
@@ -83,3 +83,36 @@
     border: 0.5rem solid var(--accent-color);
     box-shadow: none;
 }
+
+.imageContainer {
+    position: relative;
+    text-align: center;
+}
+  
+.imageContainer:hover .image {
+opacity: 0.5;
+}
+  
+.imageText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.imageContainer:hover .imageText {
+    opacity: 1;
+}
+
+@media (max-width: 1440px) {
+    .image {
+        width: 15vw;
+        height: 22vh;
+    }
+
+    .selection ul {
+        margin: 0 4rem;
+    }
+}
