--- a/app/components/skills/skills.module.css
+++ b/app/components/skills/skills.module.css
@@ -30,7 +30,8 @@
     font-size: 1.7rem;
     border-bottom: 0.5rem solid var(--accent-color);
     border-right: 0.5rem solid var(--accent-color);
-    background-color: var(--secondary-background-color);
+    background-color: var(--primary-button-color);
+    color: var(--primary-background-color);
 }
 
 .columns {
@@ -114,5 +115,19 @@ opacity: 0.5;
 
     .selection ul {
         margin: 0 4rem;
+    }
+
+    .selection li {
+        font-size: 18px;
+    }
+
+    .selection li:hover {
+        cursor: pointer;
+        font-size: 20px;
+        transition: 0.6s ease-in-out;
+        border-bottom: 0.5rem solid var(--accent-color);
+        border-right: 0.5rem solid var(--accent-color);
+        background-color: var(--primary-button-color);
+        color: var(--primary-background-color);
     }
 }
