Added media query for hero component only.

--- a/app/components/hero/hero.module.css
+++ b/app/components/hero/hero.module.css
@@ -41,3 +41,12 @@
     border-radius: 0.5rem;
 
 }
+
+@media screen and (max-width: 1440px) {
+    .description h1 {
+        font-size: 48px;
+    }
+    .description p {
+        font-size: 14px;
+    }
+}
