--- a/app/components/skills/skills.module.css
+++ b/app/components/skills/skills.module.css
@@ -75,6 +75,7 @@
     height: 24vh;
     border-radius: 100%;
     box-shadow: 0 0 2rem var(--accent-color);
+    background-color: var(--accent-color);
 }
 
 .image:hover {
