--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@ html, body {
 body {
     background-color: var(--primary-background-color);
     color: var(--primary-text-color);
+    font-family: 'Courier New', Courier, monospace;
 }
 
 button {
