--- a/app/components/projects/projects.module.css
+++ b/app/components/projects/projects.module.css
@@ -1,15 +1,17 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adjust the minmax values as needed */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: minmax(auto, auto);
     place-content: center;
     place-items: center;
     border-bottom: 0.5rem solid var(--secondary-background-color);
-    gap: 4rem; /* Add gaps between grid items */
+    gap: 4rem; 
     padding: 4rem 0;
 }
   
 .projectCard {
-    width: 80%; /* Take the full width of the grid cell */
+    width: 25vw; 
+    height: 100%;
     padding: 2rem;
     border-radius: 0.5rem;
     background-color: var(--secondary-background-color);
@@ -19,7 +21,7 @@
 
 .projectCard p {
     padding: 0.5rem 0;
-    font-size: 1rem; /* Use rem for font sizes */
+    font-size: 1rem; 
 }
 
 .projectCard:hover {
@@ -48,7 +50,7 @@
 }
 
 .image {
-    width: 100%; /* Take the full width of the parent */
+    width: 100%; 
     margin: 1rem 0;
     border-radius: 0.5rem;
     box-shadow: 0 0 1rem var(--accent-color);
@@ -60,10 +62,10 @@
 
 @media (max-width: 1440px) {
     .projectCard p {
-        font-size: 0.875rem; /* Adjust the font size for smaller screens */
+        font-size: 0.875rem; 
     }
 
     .heading {
-        font-size: 3rem; /* Adjust the heading size for smaller screens */
+        font-size: 3rem; 
     }
 }
