--- a/app/components/skills/skills.module.css
+++ b/app/components/skills/skills.module.css
@@ -22,6 +22,13 @@
     border-right: 0.5rem solid var(--secondary-background-color);
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--accent-color);
+    transition: 0.6s ease-in-out;
+    width: 15vw; 
+    height: 5vw; 
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
 }
 
 .selection li:hover {
@@ -55,16 +62,16 @@
 .grid_two {
     padding: 1rem 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Set the grid to repeat in a 2-3 pattern */
-    gap: 5rem; /* Adjust the gap as needed */
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 5rem; 
     justify-content: center;
 }
 
 .grid_three {
     padding: 1rem 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Set the grid to repeat in a 2-3 pattern */
-    gap: 10rem; /* Adjust the gap as needed */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 10rem; 
     justify-content: center;
 }
 
@@ -76,6 +83,7 @@
     border-radius: 100%;
     box-shadow: 0 0 2rem var(--accent-color);
     background-color: var(--accent-color);
+    transition: 0.3s ease-in-out;
 }
 
 .image:hover {
